# ecss_benchmarks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  results-gcc.json  results-gcc.min.json  results-msvc.json  results-msvc.min.json  results.json
.github/workflows/: benchmark.yml
build_clang/: .ninja_deps  .ninja_log  CMakeCache.txt  benchmarks_optimized.json  build.ninja  cmake_install.cmake  test_empty.cpp  vec_report.txt
src/: benchmark.cpp  ecss_flat_iterator.h
